--- a/apps/client/index.html
+++ b/apps/client/index.html
@@ -10,7 +10,7 @@
 
 <body>
 	<div id="app"></div>
-	<script type="module" src="./app/main.js"></script>
+	<script type="module" src="./app/app.js"></script>
 </body>
 
 </html>
